    the class of the stream

  - ENSURE-GENERIC-FUNCTION, DEFGENERIC and DEFMETHOD now can operate
    on functions which are being traced.

  - INTERACTIVE-STREAM-P now outputs T for ttys (terminals, consoles, etc).

  - DO/DO* are no longer primitives, but rather macros that build on top
    of the SI::WHILE iteration primitive.

* Internals:

  - The compiler now uses a more detailed tree to represent the code, keeping
    track of where variables are referenced and changed, and which are the
    parent forms of a given one.

  - The compiler structures now print unreadably to simplify inspection.

  - New algorithm for computing whether a function has to have a
    stack-allocated lexical environment, a full environment or none.

  - Do not replace LET/LET* variables whose value has side effects.

* ANSI compliance:

  - The value of *READTABLE* can now be modified by the user.

  - Implemented READTABLE-CASE, including the appropiate changes to the
    reader and the printer.

  - Floats are properly read even when *read-base* is not 10.

  - Support for binary streams of arbitrary byte size. By default, binary
    streams are written with an octet as header, which is used to determine
    the actual length of the file. However, if you pass the argument
    :use-header-p = NIL to the function OPEN, the header is not used and
    instead the size in bits of the stream element type is rounded to a
    multiple of 8 (M. Goffioul)

  - Fixed the order of evaluation of arguments in INCF,DECF,etc (M.Goffioul).

  - Default methods for CLOS streams signal now a type error, which is the
    expected error when an object which is not of type stream is passed to the
    functions dealing with streams.

  - By default READ-BYTE signals an error when EOF is reached.

  - The space should print as #\  instead of #\Space.

  - The implementation of (SETF VALUES) now produces the right result
    when there are nested (SETF VALUES) forms.
